fix spacing

--- a/public/stylesheets/application.styl
+++ b/public/stylesheets/application.styl
@@ -531,7 +531,7 @@ form.vote
     text-align center
   ul.steps
     text-align center
-    margin 1em 0 0
+    margin 1.25em 0 0
     li
       display inline-block
       margin 0 1em
